tests/baselines/reference/spellingCheckedJS2.errors.txt
tests/cases/conformance/salsa/other.js(3,1): error TS2552: Cannot find name 'Jon'. Did you mean 'John'?
tests/cases/conformance/salsa/spellingCheckedJS2.js(2,1): error TS2552: Cannot find name 'inmodule'. Did you mean 'inModule'?
tests/cases/conformance/salsa/spellingCheckedJS2.js(6,5): error TS2552: Cannot find name 'locale'. Did you mean 'locals'?
tests/cases/conformance/salsa/spellingCheckedJS2.js(12,21): error TS2551: Property 'none' does not exist on type 'Classe'. Did you mean 'non'?
tests/cases/conformance/salsa/spellingCheckedJS2.js(18,22): error TS2339: Property 'none' does not exist on type 'Classe'.
tests/cases/conformance/salsa/spellingCheckedJS2.js(30,12): error TS2551: Property 'getGMTDate' does not exist on type 'Date'. Did you mean 'getUTCDate'?
tests/cases/conformance/salsa/spellingCheckedJS2.js(33,14): error TS2552: Cannot find name 'setIntegral'. Did you mean 'setInterval'?
tests/cases/conformance/salsa/spellingCheckedJS2.js(34,1): error TS2552: Cannot find name 'AudioBuffin'. Did you mean 'AudioBuffer'?
tests/cases/conformance/salsa/spellingCheckedJS2.js(36,1): error TS2552: Cannot find name 'Jon'. Did you mean 'John'?


==== tests/cases/conformance/salsa/spellingCheckedJS2.js (8 errors) ====
    export var inModule = 1
    inmodule.toFixed()
    ~~~~~~~~
!!! error TS2552: Cannot find name 'inmodule'. Did you mean 'inModule'?
    
    function f() {
        var locals = 2
        locale.toFixed()
        ~~~~~~
!!! error TS2552: Cannot find name 'locale'. Did you mean 'locals'?
!!! related TS2728 tests/cases/conformance/salsa/spellingCheckedJS2.js:5:9: 'locals' is declared here.
    }
    class Classe {
        non = 'oui'
        methode() {
            // no error on 'this' references
            return this.none
                        ~~~~
!!! error TS2551: Property 'none' does not exist on type 'Classe'. Did you mean 'non'?
!!! related TS2728 tests/cases/conformance/salsa/spellingCheckedJS2.js:9:5: 'non' is declared here.
        }
    }
    class Derivee extends Classe {
        methode() {
            // no error on 'super' references
            return super.none
                         ~~~~
!!! error TS2339: Property 'none' does not exist on type 'Classe'.
        }
    }
    
    
    var object = {
        spaaace: 3
    }
    object.spaaaace // error on read
    object.spaace = 12 // error on write
    object.fresh = 12 // OK
    other.puuuce // OK, from another file
    new Date().getGMTDate() // OK, from another file
               ~~~~~~~~~~
!!! error TS2551: Property 'getGMTDate' does not exist on type 'Date'. Did you mean 'getUTCDate'?
!!! related TS2728 /.ts/lib.es5.d.ts:757:5: 'getUTCDate' is declared here.
    
    // No suggestions for globals from other files
    const atoc = setIntegral(() => console.log('ok'), 500)
                 ~~~~~~~~~~~
!!! error TS2552: Cannot find name 'setIntegral'. Did you mean 'setInterval'?
!!! related TS2728 /.ts/lib.dom.d.ts:19626:18: 'setInterval' is declared here.
    AudioBuffin // etc
    ~~~~~~~~~~~
!!! error TS2552: Cannot find name 'AudioBuffin'. Did you mean 'AudioBuffer'?
!!! related TS2728 /.ts/lib.dom.d.ts:2246:13: 'AudioBuffer' is declared here.
    Jimmy
    Jon
    ~~~
!!! error TS2552: Cannot find name 'Jon'. Did you mean 'John'?
!!! related TS2728 tests/cases/conformance/salsa/other.js:2:5: 'John' is declared here.
    
==== tests/cases/conformance/salsa/other.js (1 errors) ====
    var Jimmy = 1
    var John = 2
    Jon // error, it's from the same file
    ~~~
!!! error TS2552: Cannot find name 'Jon'. Did you mean 'John'?
!!! related TS2728 tests/cases/conformance/salsa/other.js:2:5: 'John' is declared here.
    var other = {
        puuce: 4
    }
    